# neobox-plugins

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: apikey.cpp.354C47C65A4927A9.idx  apikey.cpp.639C2D40F80FA4D5.idx  apikey.cpp.DD542F095C73DFA6.idx  bingapi.cpp.55C92B4AAFEB8317.idx  bingapi.cpp.93568D260C8EB1EE.idx  bingapi.h.509109AD20128A61.idx  bingapi.h.7F8975A268FDE847.idx  bingapiex.cpp.04ADC605FF6C6912.idx  bingapiex.cpp.722FBEF365B4F561.idx  bingapiex.h.2C3472B5B3EF752F.idx  bingapiex.h.E26F3664D01D7227.idx  citylist.cpp.246746D9B4639F08.idx  citylist.cpp.4EDEC9209A894EE2.idx  citylist.hpp.2CA920A102600775.idx  citylist.hpp.49DE97283E00D13D.idx  citysearch.cpp.06AA0ADB9792E4D8.idx  citysearch.cpp.9B416B65FC5DCD13.idx  citysearch.hpp.202FA514A1EC62F1.idx  citysearch.hpp.F6F7A26BB9D02786.idx  colorback.cpp.2E20E0F9044B2A30.idx  colorback.cpp.AA5339D2CC232C74.idx  colorback.hpp.3FC9B36EA6F95DEC.idx  colorback.hpp.D0EC417F7DC66A8F.idx  colorconfig.h.30E7529400F6A8E1.idx  colorconfig.h.A82CBF2B393EAF45.idx  colordlg.cpp.4A756F4B6C0FF1E8.idx  colordlg.cpp.683BE0E670A66BE9.idx  colordlg.hpp.2C7B9561BA690EAE.idx  colordlg.hpp.77FDEA9E84D9254B.idx  directapi.cpp.206C1405C2BADF47.idx  directapi.cpp.2F47DC3079B1682D.idx  directapi.h.63078A19E33CC80F.idx  directapi.h.C2D1800AA5510D28.idx  directapiex.cpp.3CDC42F2255D1582.idx  directapiex.cpp.508A54DEF806AD50.idx  directapiex.h.23050B4F44EA88E6.idx  directapiex.h.8D959CC7D0482994.idx  download.cpp.496523A90F76FED6.idx  download.cpp.E77EB7109C593508.idx  download.h.21A4F94CFA59E677.idx  (+212 more)
plugins/: CMakeLists.txt  release.py
plugins/calculator/: CMakeLists.txt
plugins/calculator/include/: calculator.h
plugins/calculator/src/: calculator.cpp
plugins/color/include/: colordlg.hpp  screenfetch.hpp  smallform.hpp  squareform.hpp
plugins/color/src/: colorback.cpp  colordlg.cpp  screenfetch.cpp  smallform.cpp  squareform.cpp
plugins/neocolorplg/include/: colorconfig.h  neocolorplg.h
plugins/neocolorplg/src/: neocolorplg.cpp  smallform.cpp
plugins/neoocrplg/include/: ocrconfig.h  ocrdialog.h
plugins/neoocrplg/src/: neoocr.cpp  neoocrplg.cpp
plugins/neospeedbox_core/: CMakeLists.txt
plugins/neospeedbox_core/include/: speedboxcfg.h
plugins/neospeedboxplg/: CMakeLists.txt
plugins/neospeedboxplg/include/: neospeedboxplg.h
plugins/neospeedboxplg/src/: trayframe.cpp
plugins/neosystemplg/include/: neosystemplg.h
plugins/neosystemplg/src/: neosystemplg.cpp
plugins/neotranslate_core/include/: translate.h  translatecfg.h
plugins/neotranslate_core/src/: translate.cpp
plugins/neotranslateplg/: CMakeLists.txt
plugins/neotranslateplg/inc/: translate.h
plugins/neotranslateplg/include/: neotranslateplg.h  translatedlg.hpp
plugins/neotranslateplg/src/: heightctrl.cpp  neotranslateplg.cpp  translatedlg.cpp
plugins/neousbplg/include/: neousbplg.h
plugins/neousbplg/src/: neousbplg.cpp  usbdlg.cpp
plugins/neowallpaper_core/include/: bingapi.h  favorie.h  wallconfig.h
plugins/neowallpaper_core/src/: bingapi.cpp  download.cpp  history.cpp  (+2 more)
plugins/neowallpaperplg/: CMakeLists.txt
plugins/ocr/: CMakeLists.txt
plugins/speedbox/: CMakeLists.txt
plugins/system/: CMakeLists.txt
plugins/timer/: CMakeLists.txt
plugins/translate/: CMakeLists.txt  README.md
plugins/translate/core/: translate.cpp
plugins/translate/inc/: translate.h  translatecfg.h
plugins/translate/include/: translatedlg.hpp
plugins/translate/src/: neotranslateplg.cpp  translatedlg.cpp
plugins/tunet/: CMakeLists.txt
plugins/wallpaper/: CMakeLists.txt
plugins/wordfish/: CMakeLists.txt
(+98 files in other folders)
